Move azure icon to images folder

--- a/servers/Azure.Mcp.Server/src/Azure.Mcp.Server.csproj
+++ b/servers/Azure.Mcp.Server/src/Azure.Mcp.Server.csproj
@@ -6,7 +6,7 @@
     <Description>Azure MCP Server - Model Context Protocol implementation for Azure</Description>
     <ReadmeUrl>https://github.com/Microsoft/mcp/blob/main/servers/Azure.Mcp.Server#readme</ReadmeUrl>
     <ReadmePath>$(RepoRoot)/servers/Azure.Mcp.Server/README.md</ReadmePath>
-    <PackageIcon>$(MSBuildThisFileDirectory)../azureicon.png</PackageIcon>
+    <PackageIcon>$(MSBuildThisFileDirectory)../images/azureicon.png</PackageIcon>
 
     <!-- Official MCP repository settings -->
     <McpRepositoryName>com.microsoft/azure</McpRepositoryName>
