Refactor StorageSync models to use schema DTOs
Replaces legacy data model classes with new schema-based record types for CloudEndpoint, RegisteredServer, ServerEndpoint, StorageSyncService, and SyncGroup. Updates all command and service interfaces and implementations to use the new schema DTOs. Adds Azure.ResourceManager.StorageSync package and implements StorageSyncService methods using the Azure SDK. This change improves consistency, serialization, and maintainability of the StorageSync tool.

--- a/tools/Azure.Mcp.Tools.StorageSync/src/Azure.Mcp.Tools.StorageSync.csproj
+++ b/tools/Azure.Mcp.Tools.StorageSync/src/Azure.Mcp.Tools.StorageSync.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Azure.ResourceManager" />
+    <PackageReference Include="Azure.ResourceManager.StorageSync" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="ModelContextProtocol" />
     <PackageReference Include="System.CommandLine" />
