--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -262,6 +262,6 @@
 ##################
 # Fabric MCP
 ##################
-/core/Microsoft.Fabric.Mcp.Core/      @microsoft/fabric-mcp
+/core/Fabric.Mcp.Core/      @microsoft/fabric-mcp
 /servers/Fabric.Mcp.Server/           @microsoft/fabric-mcp
 /tools/Fabric.Mcp.Tools.PublicApi/    @microsoft/fabric-mcp
