--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,7 +18,6 @@
     <PackageVersion Include="Azure.Messaging.EventGrid" Version="4.24.0" />
     <PackageVersion Include="Azure.Messaging.ServiceBus" Version="7.20.1" />
     <PackageVersion Include="Azure.Monitor.Ingestion" Version="1.2.0" />
-    <PackageVersion Include="Azure.Monitor.Query" Version="1.7.1" />
     <PackageVersion Include="Azure.Monitor.Query.Logs" Version="1.0.0" />
     <PackageVersion Include="Azure.ResourceManager" Version="1.13.2" />
     <PackageVersion Include="Azure.ResourceManager.ApplicationInsights" Version="1.1.0-beta.1" />
@@ -33,6 +32,7 @@
     <PackageVersion Include="Azure.ResourceManager.EventHubs" Version="1.2.1" />
     <PackageVersion Include="Azure.ResourceManager.CognitiveServices" Version="1.5.1" />
     <PackageVersion Include="Microsoft.CognitiveServices.Speech" Version="1.46.0" />
+    <PackageVersion Include="Azure.ResourceManager.Monitor" Version="1.3.1" />
     <PackageVersion Include="Azure.ResourceManager.MySql" Version="1.1.2" />
     <PackageVersion Include="Azure.ResourceManager.PostgreSql" Version="1.3.1" />
     <PackageVersion Include="Azure.ResourceManager.Redis" Version="1.5.1" />
