--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -32,7 +32,7 @@
     <PackageVersion Include="Azure.ResourceManager.EventHubs" Version="1.2.1" />
     <PackageVersion Include="Azure.ResourceManager.CognitiveServices" Version="1.5.1" />
     <PackageVersion Include="Microsoft.CognitiveServices.Speech" Version="1.46.0" />
-    <PackageVersion Include="Azure.ResourceManager.Monitor" Version="1.3.1" />
+    <PackageVersion Include="Azure.ResourceManager.Monitor" Version="1.4.0-beta.3" />
     <PackageVersion Include="Azure.ResourceManager.MySql" Version="1.1.2" />
     <PackageVersion Include="Azure.ResourceManager.PostgreSql" Version="1.3.1" />
     <PackageVersion Include="Azure.ResourceManager.Redis" Version="1.5.1" />
