--- a/tools/Azure.Mcp.Tools.FileShares/src/Azure.Mcp.Tools.FileShares.csproj
+++ b/tools/Azure.Mcp.Tools.FileShares/src/Azure.Mcp.Tools.FileShares.csproj
@@ -12,6 +12,7 @@
   <ItemGroup />
   <ItemGroup>
     <PackageReference Include="Azure.ResourceManager" />
+    <PackageReference Include="Azure.ResourceManager.FileShares" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="ModelContextProtocol" />
     <PackageReference Include="System.CommandLine" />
