Move parsing from command line to use IConfiguration.

--- a/eng/tools/ToolMetadataExporter/src/ToolMetadataExporter.csproj
+++ b/eng/tools/ToolMetadataExporter/src/ToolMetadataExporter.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <!-- Enable strongly typed binding for IConfiguration to support AOT and trimming. -->
+    <EnableConfigurationBindingGenerator>true</EnableConfigurationBindingGenerator>
   </PropertyGroup>
 
   <ItemGroup>
