Update name to ServiceConnection

--- a/eng/pipelines/templates/jobs/integration.yml
+++ b/eng/pipelines/templates/jobs/integration.yml
@@ -43,7 +43,7 @@ jobs:
     parameters:
       PathToArtifacts: $(Pipeline.Workspace)/packages_npm
       Registry: https://pkgs.dev.azure.com/1es-mcp/1es-mcp/_packaging/1es-mcp-registry/npm/registry/
-      CustomEndpoint: 'Azure SDK MCP Server Connection'
+      ServiceConnection: 'Azure SDK MCP Server Connection'
       Access: ''
       ${{ if and(eq(variables['Build.SourceBranch'], 'refs/heads/main'), eq(variables['Build.Reason'], 'IndividualCI')) }}:
         Tag: dev
