--- a/tools/Azure.Mcp.Tools.Storage/src/Azure.Mcp.Tools.Storage.csproj
+++ b/tools/Azure.Mcp.Tools.Storage/src/Azure.Mcp.Tools.Storage.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <PackageReference Include="Azure.Data.Tables" />
     <PackageReference Include="Azure.ResourceManager" />
     <PackageReference Include="Azure.Storage.Blobs" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
