--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -10,7 +10,7 @@
     <PackageVersion Include="Azure.AI.Agents.Persistent" Version="1.2.0-beta.4" />
     <PackageVersion Include="Azure.AI.OpenAI" Version="2.7.0-beta.1" />
     <PackageVersion Include="Azure.Bicep.Types" Version="0.6.27" />
-    <PackageVersion Include="Azure.Core" Version="1.49.0" />
+    <PackageVersion Include="Azure.Core" Version="1.50.0" />
     <PackageVersion Include="Azure.Data.AppConfiguration" Version="1.6.1" />
     <PackageVersion Include="Azure.Data.Tables" Version="12.11.0" />
     <PackageVersion Include="Azure.Identity" Version="1.16.0" />
@@ -19,7 +19,6 @@
     <PackageVersion Include="Azure.Messaging.EventGrid" Version="4.24.0" />
     <PackageVersion Include="Azure.Messaging.ServiceBus" Version="7.20.1" />
     <PackageVersion Include="Azure.Monitor.Ingestion" Version="1.2.0" />
-    <PackageVersion Include="Azure.Monitor.Query" Version="1.7.1" />
     <PackageVersion Include="Azure.Monitor.Query.Logs" Version="1.0.0" />
     <PackageVersion Include="Azure.ResourceManager" Version="1.13.2" />
     <PackageVersion Include="Azure.ResourceManager.ApplicationInsights" Version="1.1.0-beta.1" />
@@ -34,6 +33,7 @@
     <PackageVersion Include="Azure.ResourceManager.EventHubs" Version="1.2.1" />
     <PackageVersion Include="Azure.ResourceManager.CognitiveServices" Version="1.5.1" />
     <PackageVersion Include="Microsoft.CognitiveServices.Speech" Version="1.46.0" />
+    <PackageVersion Include="Azure.ResourceManager.Monitor" Version="1.4.0-beta.4" />
     <PackageVersion Include="Azure.ResourceManager.MySql" Version="1.1.2" />
     <PackageVersion Include="Azure.ResourceManager.PostgreSql" Version="1.3.1" />
     <PackageVersion Include="Azure.ResourceManager.Redis" Version="1.5.1" />
