--- a/tools/Azure.Mcp.Tools.Policy/src/Azure.Mcp.Tools.Policy.csproj
+++ b/tools/Azure.Mcp.Tools.Policy/src/Azure.Mcp.Tools.Policy.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Core" />
+    <PackageReference Include="Azure.Identity" />
     <PackageReference Include="Azure.ResourceManager" />
     <PackageReference Include="Azure.ResourceManager.Resources" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
