--- a/.github/workflows/event-processor.yml
+++ b/.github/workflows/event-processor.yml
@@ -102,3 +102,44 @@ jobs:
         with:
           name: event
           path: ${{ github.event_path }}
+
+        
+  label-sync-event-handler:
+    permissions:
+      contents: read
+      id-token: write
+    name: Sync GitHub Labels to Azure Storage 
+    runs-on: ubuntu-latest
+    if: github.event_name == 'label'
+    steps:
+      - name: 'Az CLI login'
+        uses: azure/login@v2
+        with:
+            client-id: a6dd2dfe-7352-41a7-9020-05301c3bca1a
+            tenant-id: 72f988bf-86f1-41af-91ab-2d7cd011db47
+            allow-no-subscriptions: true
+
+      - name: 'Checkout azure-sdk-tools repository'
+        uses: actions/checkout@v4
+        with:
+          repository: Azure/azure-sdk-tools
+          ref: mcp-gh-issue-labeler  # TODO: Update to main after testing
+          path: azure-sdk-tools
+      
+      - name: 'Setup .NET'
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: 'Build SearchIndexCreator'
+        run: |
+          dotnet restore
+          dotnet build --configuration Release --no-restore
+        working-directory: azure-sdk-tools/tools/issue-labeler/src/SearchIndexCreator
+
+      - name: 'Run SearchIndexCreator to sync labels'
+        run: |
+          dotnet run --configuration Release --no-build -- sync-labels --repo-owner microsoft --repo-name mcp
+        env:
+          GithubKey: ${{ secrets.GITHUB_TOKEN }}
+          IssueStorageName: issuelabeler8c97
