--- a/eng/pipelines/templates/jobs/sign-and-pack.yml
+++ b/eng/pipelines/templates/jobs/sign-and-pack.yml
@@ -110,6 +110,10 @@ jobs:
   parameters:
     DependsOn: Sign
 
+- template: /eng/pipelines/templates/jobs/pypi/pack-pypi.yml
+  parameters:
+    DependsOn: Sign
+
 - template: /eng/pipelines/templates/jobs/nuget/pack-and-sign-nuget.yml
   parameters:
     DependsOn: Sign
