--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -176,6 +176,12 @@
 # ServiceLabel: %tools-SQL
 # ServiceOwners:                     @ericshape @AV25242 @akromm @jeremyfrosti @mitesh-pv @achyuth-ms
 
+# PRLabel: %tools-Policy
+/tools/Azure.Mcp.Tools.Policy/         @msalaman @microsoft/azure-mcp
+
+# ServiceLabel: %tools-Policy
+# ServiceOwners:                       @msalaman
+
 # PRLabel: %tools-Postgres
 /tools/Azure.Mcp.Tools.Postgres/       @kk-src @shreyaaithal @maxluk @xiangyan99 @microsoft/azure-mcp
 
