Add support to publish packages to 1ES repository. (#1430)
* Adding parameter for customEndpoint

* Adding to integration step.

* Try updating parameter

* Update Connection  Name

* Add parameter for additional logging

* Fix path.

* Fix tag for release and urls

* update to dev/pre tags for dev builds.

* Update name to ServiceConnection

* Publish to 1ES first.

* Update display name

--- a/eng/pipelines/templates/jobs/integration.yml
+++ b/eng/pipelines/templates/jobs/integration.yml
@@ -33,6 +33,17 @@ jobs:
   - template: /eng/pipelines/templates/steps/publish-to-dev-feed.yml
     parameters:
       PathToArtifacts: $(Pipeline.Workspace)/packages_npm
+      Registry: https://pkgs.dev.azure.com/1es-mcp/1es-mcp/_packaging/1es-mcp-registry/npm/registry/
+      ServiceConnection: 'Azure SDK MCP Server Connection'
+      Access: ''
+      ${{ if and(eq(variables['Build.SourceBranch'], 'refs/heads/main'), eq(variables['Build.Reason'], 'IndividualCI')) }}:
+        Tag: dev
+      ${{ else }}:
+        Tag: pre
+
+  - template: /eng/pipelines/templates/steps/publish-to-dev-feed.yml
+    parameters:
+      PathToArtifacts: $(Pipeline.Workspace)/packages_npm
       Registry: ${{ parameters.NpmRegistry }}
       ${{ if and(eq(variables['Build.SourceBranch'], 'refs/heads/main'), eq(variables['Build.Reason'], 'IndividualCI')) }}:
         Tag: dev
