--- a/eng/pipelines/templates/steps/publish-to-dev-feed.yml
+++ b/eng/pipelines/templates/steps/publish-to-dev-feed.yml
@@ -5,6 +5,12 @@ parameters:
     type: string
   - name: Tag
     type: string
+  - name: ServiceConnection
+    type: string
+    default: ''
+  - name: Access
+    type: string
+    default: 'public'
 
 steps:
   - template: /eng/common/pipelines/templates/steps/set-default-branch.yml
@@ -13,6 +19,7 @@ steps:
     parameters:
       npmrcPath: ${{parameters.PathToArtifacts}}/.npmrc
       registryUrl: ${{parameters.Registry}}
+      ServiceConnection: ${{parameters.ServiceConnection}}
 
   - pwsh: |
       $tgzFiles = Get-ChildItem -Path . -Filter *.tgz -Recurse
@@ -28,9 +35,20 @@ steps:
         Write-Host "  - $($file.FullName)"
       }
 
+      $access = '${{parameters.Access}}'
       $tag = '${{parameters.Tag}}'
+
       foreach ($file in $tgzFiles) {
-        $command = "npm publish '$file' --access public --tag '$tag'"
+        $command = "npm publish '$file' --loglevel verbose"
+
+        if (![string]::IsNullOrEmpty($access)) {
+          $command += " --access $access"
+        }
+
+        if (![string]::IsNullOrEmpty($tag)) {
+          $command += " --tag '$tag'"
+        }
+
         Write-Host "> $command"
         Invoke-Expression $command
         if (!$?) {
