--- a/eng/pipelines/templates/jobs/pypi/pack-pypi.yml
+++ b/eng/pipelines/templates/jobs/pypi/pack-pypi.yml
@@ -22,7 +22,7 @@ jobs:
     displayName: "Pack modules for PyPI"
     inputs:
       pwsh: true
-      filePath: $(Build.SourcesDirectory)/eng/scripts/Pack-PyPI.ps1
+      filePath: $(Build.SourcesDirectory)/eng/scripts/Pack-Pypi.ps1
       arguments: >
         -BuildInfoPath '$(Pipeline.Workspace)/build_info/build_info.json'
         -ArtifactsPath '$(Pipeline.Workspace)/binaries_signed'
