--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -77,6 +77,11 @@
 # ServiceLabel: %tools-AppService
 # ServiceOwners:                       @ArthurMa1978 @weidongxu-microsoft
 
+# PRLabel: %tools-AzureMigrate
+/tools/Azure.Mcp.Tools.AzureMigrate/      @akshayrohilla @microsoft/azure-mcp
+
+# ServiceLabel: %tools-AzureMigrate
+# ServiceOwners:                       @akshayrohilla @yeddlapurishivasai @mentaltraffic @andynski
 
 # PRLabel: %tools-BestPractices
 /tools/Azure.Mcp.Tools.AzureBestPractices/             @g2vinay @conniey @fanyang-mono @XiaofuHuang @microsoft/azure-mcp
