Enhance VMSS command functionality with optional parameters for instance ID and VMSS name; update JSON serialization and error handling for improved clarity and flexibility.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ generated/
 eng/tools/ToolDescriptionEvaluator/prompts.json
 eng/tools/ToolDescriptionEvaluator/results.md
 eng/tools/ToolDescriptionEvaluator/tools.json
+deploy-log.txt
