Update based on feedback

--- a/servers/Azure.Mcp.Server/changelog-entries/1768934160282.yaml
+++ b/servers/Azure.Mcp.Server/changelog-entries/1768934160282.yaml
@@ -1,4 +1,4 @@
 pr: 1526
 changes:
   - section: "Other Changes"
-    description: "Added TruncatedResults to tools that list resources using Resource Graph"
+    description: "Added AreResultsTruncated to tools that list resources using Resource Graph"
