--- a/core/Microsoft.ModelContextProtocol.HttpServer.Distributed/Directory.Build.props
+++ b/core/Microsoft.ModelContextProtocol.HttpServer.Distributed/Directory.Build.props
@@ -3,6 +3,8 @@
   <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
 
   <PropertyGroup>
+    <!-- Use the repo root's Directory.Packages.props for central package management -->
+    <DirectoryPackagesPropsPath>$(RepoRoot)Directory.Packages.props</DirectoryPackagesPropsPath>
     <TargetFramework>net10.0</TargetFramework>
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
