cleaned up some changes

--- a/eng/pipelines/templates/jobs/update-mcp-repository.yml
+++ b/eng/pipelines/templates/jobs/update-mcp-repository.yml
@@ -9,7 +9,7 @@ parameters:
 
 jobs:
 - job: BuildAndUpdateMcpRepository
-  displayName: Build MCP Publisher and Update Repository
+  displayName: Publish server.json to MCP Repository
   ${{ if parameters.DependsOn }}:
     dependsOn: ${{ parameters.DependsOn }}
   condition: and(succeeded(), ne(variables['Skip.PublishPackage'], 'true'))
@@ -36,6 +36,7 @@ jobs:
         -NuGetFeedIndexUrl '${{ parameters.NuGetFeedIndexUrl }}'
 
   - task: AzureCLI@2
+    displayName: 'Build go tool and publish server.json'
     inputs:
       azureSubscription: 'Azure SDK Engineering System'
       scriptType: 'pscore'
@@ -47,3 +48,5 @@ jobs:
         -BuildInfoPath '$(Pipeline.Workspace)/build_info/build_info.json'
         -KeyVaultName 'azuresdkengkeyvault'
         -KeyVaultKeyName 'mcp-registry'
+    env:
+      AZURE_TOKEN_CREDENTIALS: 'AzureCLICredential'  # Have DefaultAzureCredential use the AzureCLI credential
